--- a/plugins/android-native/sensors/overview.html
+++ b/plugins/android-native/sensors/overview.html
@@ -259,7 +259,7 @@
                                 <td class="blue-diamond">Toggle Sensors on and off</td>
                             </tr>
                             <tr>
-                                <td class="blue-diamond">Control Sensor Reporitng Frequency</td>
+                                <td class="blue-diamond">Control Sensor Reporting Frequency</td>
                             </tr>
                             <tr>
                                 <td class="blue-diamond">Listen to Sensor Events in Real-Time</td>
@@ -270,8 +270,8 @@
                         </table>
                     </div>
                     <!-- <div class="info" style="margin-top: 20px"> -->
-                    <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Events/Events_Plugin_AllNodes.png" style="width: 50%">
+                    <div style="display: flex; justify-content: center; align-items: center; padding-top: 30px;">
+                        <img src="../../../images/AndroidSensors/AndroidSensors_Plugin_AllNodes.png" style="width: 80%">
                     </div>
                     <!-- </div> -->
                     <div style="margin-bottom: 250px">
