--- a/plugins/android-native/sensors/supporting_nodes.html
+++ b/plugins/android-native/sensors/supporting_nodes.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetTemperature.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetLight.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetPressure.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -281,7 +281,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetHumidity.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -299,7 +299,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetGameRotation.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -317,7 +317,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetDeviceOrientation.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -336,7 +336,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetAccelerometer.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -356,7 +356,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetAccelerometerUncalibrated.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -375,7 +375,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetGravity.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -394,7 +394,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetGyroscope.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -414,7 +414,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetGyroscopeUncalibrated.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -433,7 +433,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetLinearAcceleration.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -453,7 +453,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetRotationVector.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -472,7 +472,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetStepCount.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -491,7 +491,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetGeomagneticRotation.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -510,14 +510,14 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetMagneticField.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
                 
                 <div class="container"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Get Magnetic Field Uncablirated</h1>
+                    <h1 class="h3 text-white-shadow">Get Magnetic Field Uncalibrated</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
@@ -530,7 +530,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetMagneticFieldUncalibrated.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -549,7 +549,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/Billing/Billing_Plugin_IsFeatureSupported.png"
+                        <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_GetProximity.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
