add dropdown to take you to sensors plugin documentation

--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
                 </div>
               </a>
             </li>
+            <!-- <li>
+              <a class="dropdown-item" href="plugins/android-native/sensors/overview.html">
+                  <div class="dropdown-item-content">
+                      <img src="./images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors"
+                          class="dropdown-item-image">
+                      <div class="dropdown-item-text">
+                          Android Sensors
+                          <span class="dropdown-item-subtext">Android Plugin</span>
+                      </div>
+                  </div>
+              </a>
+            </li> -->
           </ul>
         </li>
         <li class="nav-item">
