--- a/plugins/android-native/sensors/overview.html
+++ b/plugins/android-native/sensors/overview.html
@@ -204,7 +204,7 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Android Sensors Overview</h1>
+                    <h1 class="h2 text-white-shadow">Android Sensors Overview (Still in Development)</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
