--- a/plugins/android-native/sensors/overview.html
+++ b/plugins/android-native/sensors/overview.html
@@ -162,6 +162,11 @@
                                 Supporting Nodes
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="example.html">
+                                Example Setup
+                            </a>
+                        </li>
                         <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Object Definitions</a>
