--- a/plugins/google-play-services/billing/show_inapp_messages.html
+++ b/plugins/google-play-services/billing/show_inapp_messages.html
@@ -158,6 +158,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="query_purchases.html">
+                                Query Purchases
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" href="show_inapp_messages.html">
                                 Show In-App Messages
                             </a>
